--- a/Level 1/index.html
+++ b/Level 1/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
   <div class="calculator-grid">
+    <div class="header">
+      <p>Level 1</p>
+      <p>Objective: 20</p>
+    </div>
     <div class="output">
       <div data-previous-operand class="previous-operand"></div>
       <div data-current-operand class="current-operand"></div>
@@ -33,5 +37,11 @@
     <button data-number>0</button>
     <button data-equals class="span-two">=</button>
   </div>
+  <div class="modal">
+    <div class="modal-content">
+      <p>You have passed level 1!<a href = "../Level 2/"></a><button>Next</button></p></p>
+    </div>
+  </div>
+</div>
 </body>
 </html>
