Connected level 1 and 2 via modal

--- a/Level 1/index.html
+++ b/Level 1/index.html
@@ -39,7 +39,12 @@
   </div>
   <div class="modal">
     <div class="modal-content">
-      <p>You have passed level 1!<a href = "../Level 2/"></a><button>Next</button></p></p>
+      <div class="wrapper">
+        <p>You have passed level 1!</p>
+      </div>
+      <div class = wrapper>
+        <a href = "../Level 2/index.html"><button id = "next">Next</button></a>
+      </div>
     </div>
   </div>
 </div>
