--- a/Level 2/index.html
+++ b/Level 2/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
   <div class="calculator-grid">
+    <div class="header">
+      <p>Level 1</p>
+      <p>Objective: 20</p>
+    </div>
     <div class="output">
       <div data-previous-operand class="previous-operand"></div>
       <div data-current-operand class="current-operand"></div>
@@ -33,5 +37,16 @@
     <button data-number>0</button>
     <button data-equals class="span-two">=</button>
   </div>
+  <div class="modal">
+    <div class="modal-content">
+      <div class="wrapper">
+        <p>You have passed level 1!</p>
+      </div>
+      <div class = wrapper>
+        <a href = "../Level 2/index.html"><button id = "next">Next</button></a>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
