Connected level 2 and 3, removal of buttons

--- a/Level 3/index.html
+++ b/Level 3/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="calculator-grid">
     <div class="header">
-      <p>Level 2</p>
-      <p>Objective: 165</p>
+      <p>Level 1</p>
+      <p>Objective: 20</p>
     </div>
     <div class="output">
       <div data-previous-operand class="previous-operand"></div>
@@ -21,13 +21,13 @@
     <button data-all-clear class="span-two">AC</button>
     <button data-delete>DEL</button>
     <button data-operation>÷</button>
-    <button data-number></button>
+    <button data-number>1</button>
     <button data-number>2</button>
     <button data-number>3</button>
     <button data-operation>*</button>
     <button data-number>4</button>
-    <button data-number></button>
-    <button data-number></button>
+    <button data-number>5</button>
+    <button data-number>6</button>
     <button data-operation>+</button>
     <button data-number>7</button>
     <button data-number>8</button>
@@ -40,10 +40,10 @@
   <div class="modal">
     <div class="modal-content">
       <div class="wrapper">
-        <p>You have passed level 2!</p>
+        <p>You have passed level 1!</p>
       </div>
       <div class = wrapper>
-        <a href = "../Level 3/index.html"><button id = "next">Next</button></a>
+        <a href = "../Level 2/index.html"><button id = "next">Next</button></a>
       </div>
     </div>
   </div>
