Updated connectivity and text for levels 4-30

--- a/Main Page/index.html
+++ b/Main Page/index.html
@@ -11,35 +11,35 @@
 <body>
   <div class="calculator-grid">
     <a href="../Level 1/index.html"><button>1</button></a>
-    <a href="#"><button>2</button></a>
-    <a href="#"><button>3</button></a>
-    <a href="#"><button>4</button></a>
-    <a href="#"><button>5</button></a>
-    <a href="#"><button>6</button></a>
-    <a href="#"><button>7</button></a>
-    <a href="#"><button>8</button></a>
-    <a href="#"><button>9</button></a>
-    <a href="#"><button>10</button></a>
-    <a href="#"><button>11</button></a>
-    <a href="#"><button>12</button></a>
-    <a href="#"><button>13</button></a>
-    <a href="#"><button>14</button></a>
-    <a href="#"><button>15</button></a>
-    <a href="#"><button>16</button></a>
-    <a href="#"><button>17</button></a>
-    <a href="#"><button>18</button></a>
-    <a href="#"><button>19</button></a>
-    <a href="#"><button>20</button></a>
-    <a href="#"><button>21</button></a>
-    <a href="#"><button>22</button></a>
-    <a href="#"><button>23</button></a>
-    <a href="#"><button>24</button></a>
-    <a href="#"><button>25</button></a>
-    <a href="#"><button>26</button></a>
-    <a href="#"><button>27</button></a>
-    <a href="#"><button>28</button></a>
-    <a href="#"><button>29</button></a>
-    <a href="#"><button>30</button></a>
+    <a href="../Level 2/index.html"><button>2</button></a>
+    <a href="../Level 3/index.html"><button>3</button></a>
+    <a href="../Level 4/index.html"><button>4</button></a>
+    <a href="../Level 5/index.html"><button>5</button></a>
+    <a href="../Level 6/index.html"><button>6</button></a>
+    <a href="../Level 7/index.html"><button>7</button></a>
+    <a href="../Level 8/index.html"><button>8</button></a>
+    <a href="../Level 9/index.html"><button>9</button></a>
+    <a href="../Level 10/index.html"><button>10</button></a>
+    <a href="../Level 11/index.html"><button>11</button></a>
+    <a href="../Level 12/index.html"><button>12</button></a>
+    <a href="../Level 13/index.html"><button>13</button></a>
+    <a href="../Level 14/index.html"><button>14</button></a>
+    <a href="../Level 15/index.html"><button>15</button></a>
+    <a href="../Level 16/index.html"><button>16</button></a>
+    <a href="../Level 17/index.html"><button>17</button></a>
+    <a href="../Level 18/index.html"><button>18</button></a>
+    <a href="../Level 19/index.html"><button>19</button></a>
+    <a href="../Level 20/index.html"><button>20</button></a>
+    <a href="../Level 21/index.html"><button>21</button></a>
+    <a href="../Level 22/index.html"><button>22</button></a>
+    <a href="../Level 23/index.html"><button>23</button></a>
+    <a href="../Level 24/index.html"><button>24</button></a>
+    <a href="../Level 25/index.html"><button>25</button></a>
+    <a href="../Level 26/index.html"><button>26</button></a>
+    <a href="../Level 27/index.html"><button>27</button></a>
+    <a href="../Level 28/index.html"><button>28</button></a>
+    <a href="../Level 29/index.html"><button>29</button></a>
+    <a href="../Level 30/index.html"><button>30</button></a>
   </div>
 </body>
 </html>
