--- a/Level 13/index.html
+++ b/Level 13/index.html
@@ -47,6 +47,9 @@
       </div>
     </div>
   </div>
+  <div class = "home-wrapper wrapper">
+    <a href="../Main Page/index.html">Home</a>
+  </div>
 </div>
 </body>
 </html>
