Implemented levels 3-10, added tutorials to levels 1-2

--- a/Level 1/index.html
+++ b/Level 1/index.html
@@ -50,6 +50,9 @@
   <div class = "home-wrapper wrapper">
     <a href="../Main Page/index.html">Home</a>
   </div>
+  <div class="wrapper bubble">
+    <p>The goal is to get the calculator display to match the objective number!</p>
+  </div>
 </div>
 </body>
 </html>
