--- a/Level 2/index.html
+++ b/Level 2/index.html
@@ -50,6 +50,9 @@
   <div class = "home-wrapper wrapper">
     <a href="../Main Page/index.html">Home</a>
   </div>
+  <div class="wrapper bubble">
+    <p>But not all of the buttons work anymore!</p>
+  </div>
 </div>
 </body>
 </html>
