--- a/Level 5/index.html
+++ b/Level 5/index.html
@@ -12,7 +12,7 @@
   <div class="calculator-grid">
     <div class="header">
       <p>Level 5</p>
-      <p>Objective: 165</p>
+      <p>Objective: 18</p>
     </div>
     <div class="output">
       <div data-previous-operand class="previous-operand"></div>
@@ -25,16 +25,16 @@
     <button data-number>2</button>
     <button data-number>3</button>
     <button data-operation>*</button>
-    <button data-number>4</button>
+    <button data-number></button>
     <button data-number></button>
     <button data-number></button>
     <button data-operation>+</button>
-    <button data-number>7</button>
-    <button data-number>8</button>
-    <button data-number>9</button>
+    <button data-number></button>
+    <button data-number></button>
+    <button data-number></button>
     <button data-operation>-</button>
     <button data-number>.</button>
-    <button data-number>0</button>
+    <button data-number></button>
     <button data-equals class="span-two">=</button>
   </div>
   <div class="modal">
