--- a/Level 6/index.html
+++ b/Level 6/index.html
@@ -12,7 +12,7 @@
   <div class="calculator-grid">
     <div class="header">
       <p>Level 6</p>
-      <p>Objective: 165</p>
+      <p>Objective: 64</p>
     </div>
     <div class="output">
       <div data-previous-operand class="previous-operand"></div>
@@ -20,17 +20,17 @@
     </div>
     <button data-all-clear class="span-two">AC</button>
     <button data-delete>DEL</button>
-    <button data-operation>÷</button>
+    <button data-operation></button>
+    <button data-number>1</button>
     <button data-number></button>
-    <button data-number>2</button>
     <button data-number>3</button>
     <button data-operation>*</button>
-    <button data-number>4</button>
     <button data-number></button>
+    <button data-number>5</button>
     <button data-number></button>
-    <button data-operation>+</button>
+    <button data-operation></button>
     <button data-number>7</button>
-    <button data-number>8</button>
+    <button data-number></button>
     <button data-number>9</button>
     <button data-operation>-</button>
     <button data-number>.</button>
