--- a/Level 8/index.html
+++ b/Level 8/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="calculator-grid">
     <div class="header">
-      <p>Level 2</p>
-      <p>Objective: 165</p>
+      <p>Level 8</p>
+      <p>Objective: 148,756</p>
     </div>
     <div class="output">
       <div data-previous-operand class="previous-operand"></div>
@@ -20,8 +20,8 @@
     </div>
     <button data-all-clear class="span-two">AC</button>
     <button data-delete>DEL</button>
-    <button data-operation>÷</button>
-    <button data-number></button>
+    <button data-operation></button>
+    <button data-number>1</button>
     <button data-number>2</button>
     <button data-number>3</button>
     <button data-operation>*</button>
